Run build pipeline only on relevant changes

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -7,6 +7,10 @@ on:
     branches:
       - main
   pull_request:
+    paths:
+      - 'lq1/**'
+      - 'qsrc/**'
+      - 'texture-wads/**'
 
 env:
   PYTHONUNBUFFERED: 1
