--- a/lq1/default.cfg
+++ b/lq1/default.cfg
@@ -1,18 +1,25 @@
 //========LQ Default Config========\\
 unbindall
-//Movement Keys
+
+
+// ========
+// Controls
+// ========
+
+// Movement
 bind	"w"			"+forward"
 bind	"a"			"+moveleft"
 bind	"s"			"+back"
 bind	"d"			"+moveright"
 bind	"SPACE"		"+jump"
+bind	"MOUSE2"	"+jump"
 bind	"ALT"		"+strafe"
 bind	"SHIFT"		"+speed"
 bind	"e"		    "+moveup"
-bind	"c"		"+movedown"
+bind	"c"			"+movedown"
 bind	"CTRL"		"+movedown"
 
-//Weapon Keys
+// Weapons
 bind	"MOUSE1"	"+attack"
 bind	"1"			"impulse 1"
 bind	"2"			"impulse 2"
@@ -23,70 +30,62 @@ bind	"6"			"impulse 6"
 bind	"7"			"impulse 7"
 bind	"8"			"impulse 8"
 bind	"0"			"impulse 0"
-
-//Alternate Weapons
 bind	"/"			"impulse 10"
 bind	"q"			"impulse 10"
 bind 	"MWHEELUP"	"impulse 10"
 bind 	"MWHEELDOWN" "impulse 12"
 
-//Menus
-bind	"f1"		"help"
-//bind	"f1"		"toggle r_drawviewmodel"
-bind	"f2"		"menu_save"
-bind	"f3"		"menu_load"
-bind	"f4"		"menu_options"
-bind	"f5"		"menu_multiplayer"
-//bind	"f5"		"toggle chase_active"
-bind	"f6"		"echo Saving; wait; save lq_quick"
-bind	"f9"		"echo Loading; wait; load lq_quick"
-bind	"f10"		"echo f10 is unbound"
-bind    "f12"       "screenshot"
-bind    "PRINTSCREEN" "screenshot"
-bind	"PAUSE"		"pause"
-bind	"ESCAPE"	"togglemenu"
-bind	"`"			"toggleconsole"
-bind	"t"			"messagemode"
-bind	"enter"		"messagemode"
-bind 	"TAB" 		"+showscores"
+// Menu
+bind	"f1"			"help"
+//bind	"f1"			"toggle r_drawviewmodel"
+bind	"f2"			"menu_save"
+bind	"f3"			"menu_load"
+bind	"f4"			"menu_options"
+bind	"f5"			"menu_multiplayer"
+//bind	"f5"			"toggle chase_active"
+bind	"f6"			"echo Saving; wait; save lq_quick"
+bind	"f9"			"echo Loading; wait; load lq_quick"
+bind	"f10"			"lq_toggle_style"
+bind    "f12"       	"screenshot"
+bind    "PRINTSCREEN"	"screenshot"
+bind	"PAUSE"			"pause"
+bind	"ESCAPE"		"togglemenu"
+bind	"`"				"toggleconsole"
+bind	"t"				"messagemode"
+bind	"enter"			"messagemode"
+bind 	"TAB" 			"+showscores"
 
-
-//Misc
+// Misc
 bind	"+"		"sizeup"
 bind	"="		"sizeup"
 bind	"-"		"sizedown"
 +mlook
 +speed
 
-//Cvars
+
+// =============
+// Configuration
+// =============
+
+// Console Vars
 gl_texturemode gl_nearest_mipmap_linear
-gl_texturemode_sky gl_nearest
-gl_texturemode_hud gl_nearest
 gl_texturemode2d gl_nearest
 gl_overbright 1
-gl_overbright_model 1
-gl_smoothfont 0
-gl_texture_anisotropy 2
-vid_fsaamode 1
-vid_fsaa 2
 vid_conautoscale 3
-scr_pixelaspect 1
-scr_crosshairscale 3
-scr_menuscale 3
 scr_conscale 3
+scr_conalpha 1
+scr_sbaralpha 0.9999						# 0.9999 for Ironwail compat reasons
 scr_sbarscale 3
-cl_stainmaps 0
-cl_decals 0
-cl_alwaysrun 0
-cl_particles_quake 1
-cl_beams_polygons 0
 r_font_linear 0
-r_font_postprocess_mono 1
 r_menutint 0.99 0.46 0.34
-r_waterscroll 10
 r_waterwarp 0.2
-r_particles 2
 r_stains 0
+r_wateralpha 1
+r_slimealpha 1
+r_lavaalpha 1
+r_telealpha 1
+r_lerpmuzzlehack 0							# LQ's viewmodels look better with this disabled
+r_part_classic_square 1
 registered 1
 volume 0.7
 gamma 1
@@ -94,15 +93,12 @@ contrast 1
 sensitivity 3
 topcolor 11
 bottomcolor 10
-crosshair 0
+crosshair 1
 
-//Configs
-alias	"cam"		"exec cam.cfg"
-alias	"dev"		"exec dev.cfg"
-alias	"zoom90"	"exec zoom90.cfg"
-alias	"zoom120"	"exec zoom120.cfg"
+// Misc
+if 1 alias restart "map_restart initial"	# Disable automatic load on death; 'if 1' prevents this from breaking other engines
 
-//Alias
+// Aliases
 alias	"freeze"	"toggle sv_freezenonclients;echo toggled_freeze"
 alias 	"idkfa"		"impulse 9"
 alias 	"fullammo"	"impulse 9"
@@ -111,4 +107,58 @@ alias +lq-zoom90 "fov 90;wait;fov 80;wait;fov 70;wait;fov 60;wait;fov 50;wait;fo
 alias -lq-zoom90 "fov 50;wait;fov 60;wait;fov 70;wait;fov 80;wait;fov 90"
 alias +lq-zoom120 "fov 110;wait;fov 100;wait;fov 90;wait;fov 80;wait;fov 70;wait;fov 60;wait;fov 50;wait;fov 40"
 alias -lq-zoom120 "fov 50;wait;fov 60;wait;fov 70;wait;fov 80;wait;fov 90;wait;fov 100;wait;fov 110;wait;fov 120"
+
+// Graphics Style Toggle
+alias lq_style_modern_exec "exec style_modern.cfg"
+alias lq_style_retro_exec "exec style_retro.cfg"
+alias lq_style_modern "lq_style_modern_exec; alias lq_toggle_style_set lq_style_retro"
+alias lq_style_retro "lq_style_modern_exec; alias lq_toggle_style_set lq_style_modern"
+alias lq_toggle_style "cl_warncmd 0; lq_toggle_style_set; exec autoexec.cfg; vid_reload; cl_warncmd 1"
+lq_style_modern
+
+// Other Config Files
+alias	"cam"		"exec cam.cfg"
+alias	"dev"		"exec dev.cfg"
+alias	"zoom90"	"exec zoom90.cfg"
+alias	"zoom120"	"exec zoom120.cfg"
+
+
+// ================================
+// Compatibility With Other Engines
+// ================================
+
+// Ironwail
+gl_texture_anisotropy 2
+gl_overbright_models 1
+vid_fsaa 2
+vid_fsaamode 1
+scr_pixelaspect 1
+scr_crosshairscale 3
+scr_menuscale 3
+cl_alwaysrun 0
+r_particles 2
+sv_autoload 0			# Disable automatic load on death
+
+// EZQuake
+cl_fakeshaft 1							# Client-side LG beam rendering
+gl_texturemode_viewmodels gl_nearest
+
+// Other engines
+gl_texturemode_sky gl_nearest
+gl_texturemode_hud gl_nearest
+gl_overbright_model 1
+gl_smoothfont 0
+cl_stainmaps 0
+cl_decals 0
+cl_particles_quake 1
+cl_beams_polygons 0
+r_font_postprocess_mono 1
+r_waterscroll 10
+
+
+// ===========
+// Final Stuff
+// ===========
+
+// Video Restart
 vid_restart
