Changed game name to LibreQuake

--- a/lq1/default.cfg
+++ b/lq1/default.cfg
@@ -86,6 +86,7 @@ r_lavaalpha 1
 r_telealpha 1
 r_lerpmuzzlehack 0							# LQ's viewmodels look better with this disabled
 r_part_classic_square 1
+com_fullgamename "LibreQuake"
 registered 1
 volume 0.7
 gamma 1
