Added separate engine cfg files

--- a/lq1/default.cfg
+++ b/lq1/default.cfg
@@ -69,24 +69,12 @@ bind	"-"		"sizedown"
 
 // Console Vars
 gl_texturemode gl_nearest_mipmap_linear
-gl_texturemode2d gl_nearest
-gl_overbright 1
-vid_conautoscale 3
-scr_conscale 3
-scr_conalpha 1
-scr_sbaralpha 0.9999						# 0.9999 for Ironwail compat reasons
-scr_sbarscale 3
-r_font_linear 0
-r_menutint 0.99 0.46 0.34
-r_waterwarp 0.2
-r_stains 0
+scr_conalpha
 r_wateralpha 1
 r_slimealpha 1
 r_lavaalpha 1
 r_telealpha 1
-r_lerpmuzzlehack 0							# LQ's viewmodels look better with this disabled
 r_part_classic_square 1
-com_fullgamename "LibreQuake"
 registered 1
 volume 0.7
 gamma 1
@@ -96,11 +84,7 @@ topcolor 11
 bottomcolor 10
 crosshair 1
 
-// Misc
-if 1 alias restart "map_restart initial"	# Disable automatic load on death; 'if 1' prevents this from breaking other engines
-
 // Aliases
-alias	"freeze"	"toggle sv_freezenonclients;echo toggled_freeze"
 alias 	"idkfa"		"impulse 9"
 alias 	"fullammo"	"impulse 9"
 alias	"quad"		"impulse 255"
@@ -113,8 +97,8 @@ alias -lq-zoom120 "fov 50;wait;fov 60;wait;fov 70;wait;fov 80;wait;fov 90;wait;f
 alias lq_style_modern_exec "exec style_modern.cfg"
 alias lq_style_retro_exec "exec style_retro.cfg"
 alias lq_style_modern "lq_style_modern_exec; alias lq_toggle_style_set lq_style_retro"
-alias lq_style_retro "lq_style_modern_exec; alias lq_toggle_style_set lq_style_modern"
-alias lq_toggle_style "cl_warncmd 0; lq_toggle_style_set; exec autoexec.cfg; vid_reload; cl_warncmd 1"
+alias lq_style_retro "lq_style_retro_exec; alias lq_toggle_style_set lq_style_modern"
+alias lq_toggle_style "cl_warncmd 0; lq_toggle_style_set; vid_reload; cl_warncmd 1"
 lq_style_modern
 
 // Other Config Files
@@ -123,38 +107,12 @@ alias	"dev"		"exec dev.cfg"
 alias	"zoom90"	"exec zoom90.cfg"
 alias	"zoom120"	"exec zoom120.cfg"
 
-
-// ================================
-// Compatibility With Other Engines
-// ================================
-
-// Ironwail
-gl_texture_anisotropy 2
-gl_overbright_models 1
-vid_fsaa 2
-vid_fsaamode 1
-scr_pixelaspect 1
-scr_crosshairscale 3
-scr_menuscale 3
-cl_alwaysrun 0
-r_particles 2
-sv_autoload 0			# Disable automatic load on death
-
-// EZQuake
-cl_fakeshaft 1							# Client-side LG beam rendering
-gl_texturemode_viewmodels gl_nearest
-
-// Other engines
-gl_texturemode_sky gl_nearest
-gl_texturemode_hud gl_nearest
-gl_overbright_model 1
-gl_smoothfont 0
-cl_stainmaps 0
-cl_decals 0
-cl_particles_quake 1
-cl_beams_polygons 0
-r_font_postprocess_mono 1
-r_waterscroll 10
+// Engine-specific config Files
+// This is a bit of a hack for cross-engine support
+// Executes "default_fte.cfg" for FTE, "default_darkplaces.cfg" for DP, "default_$generic.cfg" for everything else.
+set generic darkplaces
+if "FTE" isin $qt$version$qt then set generic fte
+exec default_$generic.cfg
 
 
 // ===========
