--- a/build_components.json
+++ b/build_components.json
@@ -44,6 +44,9 @@
             ["-config.cfg", "config.cfg"],
             "cam.cfg",
             "dev.cfg",
+            "default_$generic.cfg",
+            "default_fte.cfg",
+            "default_darkplaces.cfg",
             "zoom90.cfg",
             "zoom120.cfg",
             "style_modern.cfg",
