--- a/build_components.json
+++ b/build_components.json
@@ -49,8 +49,10 @@
             "default_darkplaces.cfg",
             "zoom90.cfg",
             "zoom120.cfg",
-            "style_modern.cfg",
-            "style_retro.cfg",
+            "style_fte_modern.cfg",
+            "style_fte_retro.cfg",
+            "style_ironwail_modern.cfg",
+            "style_ironwail_retro.cfg",
             "accessibility.txt"
         ]
     },
