--- a/lq1/default_$generic.cfg
+++ b/lq1/default_$generic.cfg
@@ -35,3 +35,7 @@ cl_particles_quake 1
 cl_beams_polygons 0
 r_font_postprocess_mono 1
 r_waterscroll 10
+
+// Graphics Style Toggle
+alias lq_style_modern_exec "exec style_ironwail_modern.cfg"
+alias lq_style_retro_exec "exec style_ironwail_retro.cfg"
