--- a/lq1/default_fte.cfg
+++ b/lq1/default_fte.cfg
@@ -15,5 +15,9 @@ r_stains 0
 r_lerpmuzzlehack 0					# LQ's viewmodels look better with this disabled
 com_fullgamename "LibreQuake"
 
+// Graphics Style Toggle
+alias lq_style_modern_exec "exec style_fte_modern.cfg"
+alias lq_style_retro_exec "exec style_fte_retro.cfg"
+
 // Misc
 alias restart "map_restart initial"	# Disable automatic load on death
