--- a/lq1/default_$generic.cfg
+++ b/lq1/default_$generic.cfg
@@ -38,4 +38,5 @@ r_waterscroll 10
 
 // Graphics Style Toggle
 alias lq_style_modern_exec "exec style_ironwail_modern.cfg"
+alias lq_style_classic_exec "exec style_ironwail_classic.cfg"
 alias lq_style_retro_exec "exec style_ironwail_retro.cfg"
