--- a/lq1/default_fte.cfg
+++ b/lq1/default_fte.cfg
@@ -17,6 +17,7 @@ com_fullgamename "LibreQuake"
 
 // Graphics Style Toggle
 alias lq_style_modern_exec "exec style_fte_modern.cfg"
+alias lq_style_classic_exec "exec style_fte_classic.cfg"
 alias lq_style_retro_exec "exec style_fte_retro.cfg"
 
 // Misc
