--- a/lq1/style_fte_modern.cfg
+++ b/lq1/style_fte_modern.cfg
@@ -3,10 +3,10 @@
 // ======================================================== //
 echo Modern Style
 
-// FTEQW
 r_softwarebanding 0
 r_renderscale 1
 r_nolerp 0
+r_noframegrouplerp 0
 gl_affinemodels 0
 cl_sbar 0
 r_shadow_realtime_dlight 1
