--- a/lq1/style_fte_retro.cfg
+++ b/lq1/style_fte_retro.cfg
@@ -3,10 +3,10 @@
 // ======================================================= //
 echo Retro Style
 
-// FTEQW
 r_softwarebanding 1
 r_renderscale -0.25
 r_nolerp 1
+r_noframegrouplerp 1
 gl_affinemodels 1
 cl_sbar 1
 r_shadow_realtime_dlight 0
