--- a/lq1/style_ironwail_modern.cfg
+++ b/lq1/style_ironwail_modern.cfg
@@ -3,8 +3,8 @@
 // =========================================================== //
 echo Modern Style
 
-// Ironwail
 r_softemu 0
 r_scale 1
-r_lerpmodels 1
+r_lerpmodels 2
 r_lerpmove 1
+hudstyle 2
