--- a/lq1/style_ironwail_retro.cfg
+++ b/lq1/style_ironwail_retro.cfg
@@ -3,8 +3,8 @@
 // ========================================================== //
 echo Retro Style
 
-// Ironwail
 r_softemu 3
 r_scale 4
 r_lerpmodels 0
 r_lerpmove 0
+hudstyle 0
