--- a/lq1/default.cfg
+++ b/lq1/default.cfg
@@ -94,7 +94,8 @@ alias +lq-zoom120 "fov 110;wait;fov 100;wait;fov 90;wait;fov 80;wait;fov 70;wait
 alias -lq-zoom120 "fov 50;wait;fov 60;wait;fov 70;wait;fov 80;wait;fov 90;wait;fov 100;wait;fov 110;wait;fov 120"
 
 // Graphics Style Toggle
-alias lq_style_modern "lq_style_modern_exec; alias lq_toggle_style_set lq_style_retro"
+alias lq_style_modern "lq_style_modern_exec; alias lq_toggle_style_set lq_style_classic"
+alias lq_style_classic "lq_style_classic_exec; alias lq_toggle_style_set lq_style_retro"
 alias lq_style_retro "lq_style_retro_exec; alias lq_toggle_style_set lq_style_modern"
 alias lq_toggle_style "cl_warncmd 0; lq_toggle_style_set; vid_reload; cl_warncmd 1"
 lq_style_modern
