--- a/lq1/default_fte.cfg
+++ b/lq1/default_fte.cfg
@@ -3,9 +3,8 @@
 // ======================================================= //
 
 // Console Vars
-gl_texturemode2d gl_nearest
+gl_texturemode2d nll
 gl_overbright 1
-vid_conautoscale 3
 scr_conscale 3
 scr_sbaralpha 1
 r_font_linear 0
