--- a/lq1/default_fte.cfg
+++ b/lq1/default_fte.cfg
@@ -12,6 +12,7 @@ r_menutint 0.99 0.46 0.34
 r_waterwarp 0.2
 r_stains 0
 r_lerpmuzzlehack 0					# LQ's viewmodels look better with this disabled
+m_preset_chosen 1
 com_fullgamename "LibreQuake"
 
 // Graphics Style Toggle
