Added QW infokeys

--- a/lq1/default.cfg
+++ b/lq1/default.cfg
@@ -84,6 +84,10 @@ topcolor 11
 bottomcolor 10
 crosshair 1
 
+// QuakeWorld Server Infokeys
+serverinfo dq 1     // Drop Quad on death in DM
+serverinfo dr 1     // Drop Ring on death in DM
+
 // Aliases
 alias 	"idkfa"		"impulse 9"
 alias 	"fullammo"	"impulse 9"
