--- a/lq1/style_fte_modern.cfg
+++ b/lq1/style_fte_modern.cfg
@@ -3,11 +3,11 @@
 // ======================================================== //
 echo Modern Style
 
-r_softwarebanding 0
-r_renderscale 1
-r_nolerp 0
-r_noframegrouplerp 0
-gl_affinemodels 0
-cl_sbar 0
-r_shadow_realtime_dlight 1
-r_dynamic 1
+r_softwarebanding 0			# Limited color palette
+r_renderscale 1				# Artifical screen resolution scaling
+r_nolerp 0					# Animation interpolation
+r_noframegrouplerp 0		# Animation interpolation for framegrouped models (such as torches)
+gl_affinemodels 0			# Affine texture projection
+cl_sbar 0					# Status bar HUD style
+r_dynamic 1					# Dynamic lightning setting
+r_shadow_realtime_dlight 1	# Dynamic lighting shadows
