--- a/lq1/style_ironwail_retro.cfg
+++ b/lq1/style_ironwail_retro.cfg
@@ -3,8 +3,8 @@
 // ========================================================== //
 echo Retro Style
 
-r_softemu 3
-r_scale 4
-r_lerpmodels 0
-r_lerpmove 0
-hudstyle 0
+r_softemu 3		# Software renderer emulation
+r_scale 4		# Artifical screen resolution scaling
+r_lerpmodels 0	# Animation interpolation
+r_lerpmove 0	# Movement interpolation
+hudstyle 0		# Status bar HUD style
