--- a/lq1/default_$generic.cfg
+++ b/lq1/default_$generic.cfg
@@ -16,6 +16,7 @@ scr_sbaralpha 0.9999	    # 0.9999 for Ironwail compat reasons
 cl_alwaysrun 0
 r_particles 2
 r_waterwarp 0.2
+r_viewmodel_quake 1
 sv_autoload 0			    # Disable automatic load on death
 alias "freeze" "toggle sv_freezenonclients; echo toggled_freeze"
 
