--- a/lq1/default_fte.cfg
+++ b/lq1/default_fte.cfg
@@ -12,6 +12,9 @@ r_menutint 0.99 0.46 0.34
 r_waterwarp 0.2
 r_stains 0
 r_lerpmuzzlehack 0					# LQ's viewmodels look better with this disabled
+r_part_classic_square 1
+r_viewmodel_fov 80
+r_viewmodel_quake 1
 m_preset_chosen 1
 com_fullgamename "LibreQuake"
 
