Updated sbaralpha for Ironwail

--- a/lq1/default_$generic.cfg
+++ b/lq1/default_$generic.cfg
@@ -12,7 +12,7 @@ scr_crosshairscale 3
 scr_menuscale 3
 scr_conscale 3
 scr_sbarscale 3
-scr_sbaralpha 0.9999	    # 0.9999 for Ironwail compat reasons
+scr_sbaralpha 1
 cl_alwaysrun 0
 r_particles 2
 r_waterwarp 0.2
