Added particle opacity control in style config

--- a/lq1/style_fte_modern.cfg
+++ b/lq1/style_fte_modern.cfg
@@ -11,3 +11,4 @@ gl_affinemodels 0			# Affine texture projection
 cl_sbar 0					# Status bar HUD style
 r_dynamic 1					# Dynamic lightning setting
 r_shadow_realtime_dlight 1	# Dynamic lighting shadows
+r_part_classic_opaque 0  	# Particle opacity
