--- a/lq1/style_fte_retro.cfg
+++ b/lq1/style_fte_retro.cfg
@@ -11,3 +11,4 @@ gl_affinemodels 1			# Affine texture projection
 cl_sbar 1					# Status bar HUD style
 r_dynamic 2					# Dynamic lightning setting
 r_shadow_realtime_dlight 0	# Dynamic lighting shadows
+r_part_classic_opaque 1  	# Particle opacity
