--- a/build_components.json
+++ b/build_components.json
@@ -25,12 +25,11 @@
             "demo1.dem",
             "demo2.dem",
             "demo3.dem",
-            "progs.dat"
+            "progs.dat",
+            "qwprogs.dat"
         ],
         "files_pak1": [],
-        "files_unpacked": [
-            "qwprogs.dat"
-        ]
+        "files_unpacked": []
     },
     "config": {
         "base_dir": "lq1",
