Updated FTEQW default config to make LAN deathmatch setup easier

--- a/lq1/default_fte.cfg
+++ b/lq1/default_fte.cfg
@@ -17,6 +17,8 @@ r_viewmodel_fov 80
 r_viewmodel_quake 1
 m_preset_chosen 1
 com_fullgamename "LibreQuake"
+sb_hidenetquake 1					# Hides netquake servers from browser by default
+sb_showmap 1						# Shows map in server browser
 
 // Graphics Style Toggle
 alias lq_style_modern_exec "exec style_fte_modern.cfg"
