GH: Added a guide for setting up LAN deathmatch. (#172)
* Added deathmatch guide

* Updated README to reference deathmatch guide

* Updated FTEQW default config to make LAN deathmatch setup easier

* Updated build config to include deathmatch guide in docs

--- a/build_components.json
+++ b/build_components.json
@@ -14,7 +14,8 @@
             "docs/freedoom-docs/README.adoc",
             "docs/misc-docs/COPYING",
             "docs/misc-docs/LibreProgsDeluxe.md",
-            "docs/misc-docs/pop.lmp.md"
+            "docs/misc-docs/pop.lmp.md",
+            "docs/deathmatch-setup-guide.txt"
         ]
     },
     "root": {
