--- a/lq1/maps/src/-buildconfigs-/dm/lqdm1.conf
+++ b/lq1/maps/src/-buildconfigs-/dm/lqdm1.conf
@@ -1,4 +1,3 @@
 LQ_BSP_FLAGS="-transwater -splitturb"
-LQ_VIS_FLAGS=""
+LQ_VIS_FLAGS="-noambientwater"
 LQ_LIG_FLAGS="-bounce -bouncestyled -dirt -extra4"
- 
