--- a/build_components.json
+++ b/build_components.json
@@ -498,7 +498,8 @@
         "base_dir": "lq1",
         "source_if_missing": "",
         "files_pak0": [],
-        "files_pak1": [
+        "files_pak1": [],
+        "files_unpacked": [
             "maps/lqdm1.bsp",
             "maps/lqdm1.lit",
             "maps/lqdm2.bsp",
@@ -525,8 +526,7 @@
             "maps/lqdm12.lit",
             "maps/lqdm13.bsp",
             "maps/lqdm13.lit"
-        ],
-        "files_unpacked": []
+        ]
     },
 
     "lite_assets": {
