--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -36,7 +36,7 @@ jobs:
         path: texture-wads/*.wad
 
   build_progs:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04  # TODO: change this back to ubuntu-latest once that doesn't point to 22.04 anymore
     steps:
     - uses: actions/checkout@v4
     - name: Install dependencies
