BUILD: added gfx/menudemos.lmp to pak1.pak
 added gfx/menudemos.lmp to pak1.pak in the build script

--- a/build_components.json
+++ b/build_components.json
@@ -723,6 +723,7 @@
             "gfx/mainmenu.lmp",
             "gfx/conback.lmp",
             "gfx/menumods.lmp",
+            "gfx/menudemos.lmp",
             "gfx/levels.lmp",
             "gfx/demos.lmp",
             "gfx/pop.lmp"
