CFG:improved controller support + more
improved controller support + doom style weapon switch as an optional toggle in the config keyboard and a default for controller on the dpad

--- a/lq1/default.cfg
+++ b/lq1/default.cfg
@@ -3,37 +3,38 @@ unbindall
 
 
 // ========
-// Controls
+// Keyboard Controls
 // ========
 
 // Movement
-bind	"w"			"+forward"
-bind	"a"			"+moveleft"
-bind	"s"			"+back"
-bind	"d"			"+moveright"
-bind	"SPACE"		"+jump"
-bind	"MOUSE2"	"+jump"
-bind	"ALT"		"+strafe"
-bind	"SHIFT"		"+speed"
-bind	"e"		    "+moveup"
-bind	"c"			"+movedown"
-bind	"CTRL"		"+movedown"
+bind	"w"			    "+forward"
+bind	"a"			    "+moveleft"
+bind	"s"			    "+back"
+bind	"d"			    "+moveright"
+bind	"SPACE"		    "+jump"
+bind	"MOUSE2"	    "+jump"
+bind	"ALT"		    "+strafe"
+bind	"SHIFT"		    "+speed"
+bind	"e"		        "+moveup"
+bind	"c"			    "+movedown"
+bind	"CTRL"		    "+movedown"
 
 // Weapons
-bind	"MOUSE1"	"+attack"
-bind	"1"			"impulse 1"
-bind	"2"			"impulse 2"
-bind	"3"			"impulse 3"
-bind	"4"			"impulse 4"
-bind	"5"			"impulse 5"
-bind	"6"			"impulse 6"
-bind	"7"			"impulse 7"
-bind	"8"			"impulse 8"
-bind	"0"			"impulse 0"
-bind	"/"			"impulse 10"
-bind	"q"			"impulse 10"
-bind 	"MWHEELUP"	"impulse 10"
-bind 	"MWHEELDOWN" "impulse 12"
+bind	"MOUSE1"	    "+attack"
+bind	"MOUSE5"	    "+melee"
+bind	"1"			    "impulse 1"
+bind	"2"			    "impulse 2"
+bind	"3"			    "impulse 3"
+bind	"4"			    "impulse 4"
+bind	"5"			    "impulse 5"
+bind	"6"			    "impulse 6"
+bind	"7"			    "impulse 7"
+bind	"8"			    "impulse 8"
+bind	"0"			    "impulse 0"
+bind	"/"			    "impulse 10"
+bind	"q"			    "impulse 10"
+bind 	"MWHEELUP"	    "impulse 10"
+bind 	"MWHEELDOWN"    "impulse 12"
 
 // Menu
 bind	"f1"			"help"
@@ -56,12 +57,34 @@ bind	"enter"			"messagemode"
 bind 	"TAB" 			"+showscores"
 
 // Misc
-bind	"+"		"sizeup"
-bind	"="		"sizeup"
-bind	"-"		"sizedown"
-+mlook
-+speed
+bind	"+"		        "sizeup"
+bind	"="		        "sizeup"
+bind	"-"		        "sizedown"
 
+// ========
+// Gamepad Controls
+// ========
+
+// Movement
+bind    "ABUTTON"       "+jump"
+bind    "BBUTTON"       "+jump"
+bind    "LTRIGGER"      "+jump"
+bind    "LTHUMB"        "+speed"
+
+// Weapons
+bind    "RTRIGGER"      "+attack"
+bind    "RTHUMB"        "+con_meleeatk"
+bind    "UPARROW"       "con_shotguns0"
+bind    "RIGHTARROW"    "con_nailguns0"
+bind    "LEFTARROW"     "con_explguns0"
+bind    "DOWNARROW"     "con_lightgun0;impulse 8;wait;echo;echo;echo;echo"
+bind    "RSHOULDER"     "con_nextweapn"
+bind    "LSHOULDER"     "con_prevweapn"
+
+
+// Menu
+bind	"YBUTTON"		"menu_save"
+bind	"XBUTTON"		"menu_load"
 
 // =============
 // Configuration
@@ -82,19 +105,70 @@ sensitivity 3
 topcolor 11
 bottomcolor 10
 crosshair 1
+joy_enable 1
++mlook
 
 // QuakeWorld Server Infokeys
 serverinfo dq 1     // Drop Quad on death in DM
 serverinfo dr 1     // Drop Ring on death in DM
 
+// Engine-specific config Files
+// This is a bit of a hack for cross-engine support
+// Executes "default_fte.cfg" for FTE, "default_darkplaces.cfg" for DP, "default_$generic.cfg" for everything else.
+set generic darkplaces
+if "FTE" isin $qt$version$qt then set generic fte
+exec default_$generic.cfg
+
+// =============
 // Aliases
-alias 	"idkfa"		"impulse 9"
-alias 	"fullammo"	"impulse 9"
-alias	"quad"		"impulse 255"
-alias +lq-zoom90 "fov 90;wait;fov 80;wait;fov 70;wait;fov 60;wait;fov 50;wait;fov 40"
-alias -lq-zoom90 "fov 50;wait;fov 60;wait;fov 70;wait;fov 80;wait;fov 90"
-alias +lq-zoom120 "fov 110;wait;fov 100;wait;fov 90;wait;fov 80;wait;fov 70;wait;fov 60;wait;fov 50;wait;fov 40"
-alias -lq-zoom120 "fov 50;wait;fov 60;wait;fov 70;wait;fov 80;wait;fov 90;wait;fov 100;wait;fov 110;wait;fov 120"
+// =============
+
+// Misc
+alias 	"idkfa"		    "impulse 9"
+alias 	"fullammo"	    "impulse 9"
+alias 	"quad"		    "impulse 255"
+
+// Modern style melee attackcon_nextweapon
+alias   "+melee"        "impulse 1;+attack"
+alias   "-melee"        "-attack"
+
+// Zoom aliases
+alias   "+lq-zoom90"    "fov 90;wait;fov 80;wait;fov 70;wait;fov 60;wait;fov 50;wait;fov 40"
+alias   "-lq-zoom90"    "fov 50;wait;fov 60;wait;fov 70;wait;fov 80;wait;fov 90"
+alias   "+lq-zoom120"   "fov 110;wait;fov 100;wait;fov 90;wait;fov 80;wait;fov 70;wait;fov 60;wait;fov 50;wait;fov 40"
+alias   "-lq-zoom120"   "fov 50;wait;fov 60;wait;fov 70;wait;fov 80;wait;fov 90;wait;fov 100;wait;fov 110;wait;fov 120"
+
+// Dpad doom style weapon switch
+alias "+con_meleeatk"   "impulse 1;+attack;wait;bind LEFTARROW con_explguns0;bind RIGHTARROW con_nailguns0;bind UPARROW con_shotguns0"
+alias "-con_meleeatk"   "-attack"
+alias "con_shotguns0"   "impulse 2;wait;bind UPARROW con_shotguns1;wait;echo;echo;echo;echo;bind LEFTARROW con_explguns0;bind RIGHTARROW con_nailguns0"
+alias "con_shotguns1"   "impulse 2;wait;impulse 3;wait;bind UPARROW con_shotguns0;wait;echo;echo;echo;echo;bind LEFTARROW con_explguns0;bind RIGHTARROW con_nailguns0"
+alias "con_nailguns0"   "impulse 4;wait;bind RIGHTARROW con_nailguns1;wait;echo;echo;echo;echo;bind LEFTARROW con_explguns0;bind UPARROW con_shotguns0"
+alias "con_nailguns1"   "impulse 4;wait;impulse 5;wait;bind RIGHTARROW con_nailguns0;wait;echo;echo;echo;echo;bind LEFTARROW con_explguns0;bind UPARROW con_shotguns0"
+alias "con_explguns0"   "impulse 6;wait;bind LEFTARROW con_explguns1;wait;echo;echo;echo;echo;bind RIGHTARROW con_nailguns0;bind UPARROW con_shotguns0"
+alias "con_explguns1"   "impulse 6;wait;impulse 7;wait;bind LEFTARROW con_explguns0;wait;echo;echo;echo;echo;bind RIGHTARROW con_nailguns0;bind UPARROW con_shotguns0"
+alias "con_lightgun0"   "impulse 8;wait;echo;echo;echo;echo;bind LEFTARROW con_explguns0;bind RIGHTARROW con_nailguns0;bind UPARROW con_shotguns0"
+alias "con_nextweapn"   "impulse 10;wait;bind LEFTARROW con_explguns0;bind RIGHTARROW con_nailguns0;bind UPARROW con_shotguns0"
+alias "con_prevweapn"   "impulse 12;wait;bind LEFTARROW con_explguns0;bind RIGHTARROW con_nailguns0;bind UPARROW con_shotguns0"
+
+// Keyboard doom style weapon switch
+alias "doom_weapon_switch_info" "echo; echo; echo; echo --- ; echo doom_weapon_switch is a number row weapon switch style which is more like doom and halflife ; echo 1 is axe;echo 2 is Shotgun and Super Shotgun ; echo 3 is Nailgun and Super Nailgun ; echo 4 is Grenade Launcher and Rocket Launcher ; echo 5 is Lightning Gun; echo ---- ;echo type doom_weapon_switch1 to enable it ; echo doom_weapon_switch0 to revert it "
+
+alias "doom_weapon_switch1" "echo doom style weapon switch enabled! ; bind MOUSE5 +key_meleeatk ; bind 1 key_meleewep0 ; bind 2 key_shotguns0 ; bind 3 key_nailguns0 ; bind 4 key_explguns0 ; bind 5 con_lightgun0 ; unbind 6 ; unbind 7 ; unbind 8 ; bind MWHEELUP key_nextweapn ; bind MWHEELDOWN key_prevweapn"
+alias "doom_weapon_switch0" "echo doom style weapon switch disabled! ; bind MOUSE5 +melee ; bind 1 impulse 1 ; bind 2 impulse 2 ; bind 3 impulse 3  ; bind 4 impulse 4 ; bind 5 impulse 5 ; bind 6 impulse 6 ; bind 7 impulse 7 ; bind 8 impulse 8 ; bind MWHEELUP impulse 10 ; bind MWHEELDOWN impulse 12"
+
+alias "key_meleewep0"   "impulse 1;wait;bind 4 key_explguns0;bind 3 key_nailguns0;bind 2 key_shotguns0"
+alias "key_shotguns0"   "impulse 2;wait;bind 2 key_shotguns1;wait;echo;echo;echo;echo;bind 4 key_explguns0;bind 3 key_nailguns0"
+alias "key_shotguns1"   "impulse 2;wait;impulse 3;wait;bind 2 key_shotguns0;wait;echo;echo;echo;echo;bind 4 key_explguns0;bind 3 key_nailguns0"
+alias "key_nailguns0"   "impulse 4;wait;bind 3 key_nailguns1;wait;echo;echo;echo;echo;bind 4 key_explguns0;bind 2 key_shotguns0"
+alias "key_nailguns1"   "impulse 4;wait;impulse 5;wait;bind 3 key_nailguns0;wait;echo;echo;echo;echo;bind 4 key_explguns0;bind 2 key_shotguns0"
+alias "key_explguns0"   "impulse 6;wait;bind 4 key_explguns1;wait;echo;echo;echo;echo;bind 3 key_nailguns0;bind 2 key_shotguns0"
+alias "key_explguns1"   "impulse 6;wait;impulse 7;wait;bind 4 key_explguns0;wait;echo;echo;echo;echo;bind 3 key_nailguns0;bind 2 key_shotguns0"
+alias "key_lightgun0"   "impulse 8;wait;echo;echo;echo;echo;bind 4 key_explguns0;bind 3 key_nailguns0;bind 2 key_shotguns0"
+alias "key_nextweapn"   "impulse 10;wait;bind 4 key_explguns0;bind 3 key_nailguns0;bind 2 key_shotguns0"
+alias "key_prevweapn"   "impulse 12;wait;bind 4 key_explguns0;bind 3 key_nailguns0;bind 2 key_shotguns0"
+alias "+key_meleeatk"   "impulse 1;+attack;wait;bind 4 key_explguns0;bind 3 key_nailguns0;bind 2 key_shotguns0"
+alias "-key_meleeatk"   "-attack"
 
 // Graphics Style Toggle
 alias lq_style_modern "lq_style_modern_exec; alias lq_toggle_style_set lq_style_retro"
@@ -108,9 +182,4 @@ alias	"dev"		"exec dev.cfg"
 alias	"zoom90"	"exec zoom90.cfg"
 alias	"zoom120"	"exec zoom120.cfg"
 
-// Engine-specific config Files
-// This is a bit of a hack for cross-engine support
-// Executes "default_fte.cfg" for FTE, "default_darkplaces.cfg" for DP, "default_$generic.cfg" for everything else.
-set generic darkplaces
-if "FTE" isin $qt$version$qt then set generic fte
-exec default_$generic.cfg
+
