Update build_components.json for Wizard sound fix

--- a/build_components.json
+++ b/build_components.json
@@ -236,7 +236,7 @@
             "sound/wizard/hit.wav",
             "sound/wizard/wattack.wav",
             "sound/wizard/wdeath.wav",
-            "sound/wizard/widle.wav",
+            "sound/wizard/widle1.wav",
             "sound/wizard/widle2.wav",
             "sound/wizard/wpain.wav",
             "sound/wizard/wsight.wav",
