BUILD: Added DM maps to server release

--- a/build_releases.json
+++ b/build_releases.json
@@ -73,6 +73,7 @@
         "components": [
             "docs",
             "maps_server",
+            "maps_dm",
             "progs_server",
             "config_server"
         ]
