CONFIG: Disabled hacky zfighting fix in FTEQW

--- a/lq1/default_fte.cfg
+++ b/lq1/default_fte.cfg
@@ -19,6 +19,7 @@ m_preset_chosen 1
 com_fullgamename "LibreQuake"
 sb_hidenetquake 1					# Hides netquake servers from browser by default
 sb_showmap 1						# Shows map in server browser
+r_polygonoffset_submodel_map ""		# Disables hacky zfighting fix
 
 // Graphics Style Toggle
 alias lq_style_modern_exec "exec style_fte_modern.cfg"
