--- a/docs/flatpak-metadata/io.github.lavenderdotpet.LibreQuake.desktop
+++ b/docs/flatpak-metadata/io.github.lavenderdotpet.LibreQuake.desktop
@@ -2,8 +2,44 @@
 Name=LibreQuake
 Comment=First person shooter
 Icon=io.github.lavenderdotpet.LibreQuake
-Exec=librequake.sh
+Exec=io.github.lavenderdotpet.LibreQuake.sh
 Terminal=false
 Type=Application
 Categories=Game;ActionGame
 Keywords=quake;librequake
+Actions=open-user-dir;ironwail;quakespasm;vkquake;qssm
+
+[Desktop Action open-user-dir]
+Name=Open user content directory
+Icon=folder
+Exec=io.github.lavenderdotpet.LibreQuake.open-userdir.sh
+
+[Desktop Action ironwail]
+Name=Ironwail
+Icon=io.github.lavenderdotpet.LibreQuake.quakespasm
+Exec=io.github.lavenderdotpet.LibreQuake.sh ironwail
+
+[Desktop Action quakespasm]
+Name=QuakeSpasm
+Icon=io.github.lavenderdotpet.LibreQuake.quakespasm
+Exec=io.github.lavenderdotpet.LibreQuake.sh quakespasm
+
+[Desktop Action vkquake]
+Name=VkQuake
+Icon=io.github.lavenderdotpet.LibreQuake.quakespasm
+Exec=io.github.lavenderdotpet.LibreQuake.sh vkquake
+
+[Desktop Action qssm]
+Name=QSS-M
+Icon=io.github.lavenderdotpet.LibreQuake.quakespasm
+Exec=io.github.lavenderdotpet.LibreQuake.sh qssm
+
+# [Desktop Action fteqw]
+# Name=FTEQW
+# Icon=io.github.lavenderdotpet.LibreQuake.fteqw
+# Exec=io.github.lavenderdotpet.LibreQuake.sh fteqw
+#
+# [Desktop Action tyrquake]
+# Name=TyrQuake
+# Icon=io.github.lavenderdotpet.LibreQuake.tyrquake
+# Exec=io.github.lavenderdotpet.LibreQuake.sh tyrquake
