BUILD: fixed dhit2.wav being mislabled as dhit.wav

--- a/build_components.json
+++ b/build_components.json
@@ -109,7 +109,7 @@
             "sound/buttons/switch04.wav",
             "sound/buttons/switch21.wav",
             "sound/demon/ddeath.wav",
-            "sound/demon/dhit.wav",
+            "sound/demon/dhit2.wav",
             "sound/demon/djump.wav",
             "sound/demon/dland2.wav",
             "sound/demon/dpain1.wav",
