--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -3,8 +3,18 @@
 
 # ZungryWare
 lq1/maps/**/lqdm*	@ZungrySoft
-lq1/maps/**/e1m2*	@ZungrySoft
-lq1/maps/**/e1m3*	@ZungrySoft
-lq1/maps/**/e1m4*	@ZungrySoft
-lq1/maps/**/e1m5*	@ZungrySoft
+lq1/maps/**/e1*		@ZungrySoft
+lq1/maps/**/e2m2*	@ZungrySoft
 lq1/maps/**/e4m1*	@ZungrySoft
+
+# Nolcoz
+lq1/maps/**/e1m7*	@Nolcoz
+lq1/maps/**/e2m3*	@Nolcoz
+lq1/maps/**/e2m4*	@Nolcoz
+lq1/maps/**/e2m5*	@Nolcoz
+lq1/maps/**/e3m3*	@Nolcoz
+lq1/maps/**/e3m4*	@Nolcoz
+lq1/maps/**/e3m6*	@Nolcoz
+lq1/maps/**/e4m3*	@Nolcoz
+lq1/maps/**/e4m4*	@Nolcoz
+lq1/maps/**/e4m5*	@Nolcoz
