Run ci on script changes

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -9,6 +9,7 @@ on:
   pull_request:
     paths:
       - '.github/workflows/build_release.yml'
+      - '.github/scripts/**'
       - 'lq1/**'
       - 'qsrc/**'
       - 'texture-wads/**'
