CFG: replaced all # with //
replaced all # with // due to cfgs not supporting # as a comment // is the comment style
this could cause some engines to read the whole line including the comment

--- a/lq1/default_$generic.cfg
+++ b/lq1/default_$generic.cfg
@@ -17,13 +17,13 @@ cl_alwaysrun 1
 r_particles 2
 r_waterwarp 0.2
 r_viewmodel_quake 1
-sv_autoload 0			    # Disable automatic load on death
+sv_autoload 0			    // Disable automatic load on death
 alias "freeze" "toggle sv_freezenonclients; echo toggled_freeze"
 
 // EZQuake
-cl_fakeshaft 1				            # Client-side LG beam rendering
+cl_fakeshaft 1				            // Client-side LG beam rendering
 gl_texturemode_viewmodels gl_nearest
-r_lerpmuzzlehack 0						# LQ's viewmodels look better with this disabled
+r_lerpmuzzlehack 0						// LQ's viewmodels look better with this disabled
 
 // Other engines
 gl_texturemode_sky gl_nearest
