--- a/lq1/style_ironwail_modern.cfg
+++ b/lq1/style_ironwail_modern.cfg
@@ -3,8 +3,8 @@
 // =========================================================== //
 echo Modern Style
 
-r_softemu 0		# Software renderer emulation
-r_scale 1		# Artifical screen resolution scaling
-r_lerpmodels 1	# Animation interpolation
-r_lerpmove 1	# Movement interpolation
-hudstyle 2		# Status bar HUD style
+r_softemu 0		// Software renderer emulation
+r_scale 1		// Artifical screen resolution scaling
+r_lerpmodels 1	// Animation interpolation
+r_lerpmove 1	// Movement interpolation
+hudstyle 2		// Status bar HUD style
