--- a/lq1/default_fte.cfg
+++ b/lq1/default_fte.cfg
@@ -11,19 +11,19 @@ r_font_linear 0
 r_menutint 0.99 0.46 0.34
 r_waterwarp 0.2
 r_stains 0
-r_lerpmuzzlehack 0					# LQ's viewmodels look better with this disabled
+r_lerpmuzzlehack 0					// LQ's viewmodels look better with this disabled
 r_part_classic_square 1
 r_viewmodel_fov 80
 r_viewmodel_quake 1
 m_preset_chosen 1
 com_fullgamename "LibreQuake"
-sb_hidenetquake 1					# Hides netquake servers from browser by default
-sb_showmap 1						# Shows map in server browser
+sb_hidenetquake 1					// Hides netquake servers from browser by default
+sb_showmap 1						// Shows map in server browser
 
 // Graphics Style Toggle
 alias lq_style_modern_exec "exec style_fte_modern.cfg"
 alias lq_style_retro_exec "exec style_fte_retro.cfg"
 
 // Misc
-alias restart "map_restart initial"	# Disable automatic load on death
+alias restart "map_restart initial"	// Disable automatic load on death
 alias host_timescale sv_gamespeed
