--- a/lq1/style_fte_retro.cfg
+++ b/lq1/style_fte_retro.cfg
@@ -3,12 +3,12 @@
 // ======================================================= //
 echo Retro Style
 
-r_softwarebanding 1			# Limited color palette
-r_renderscale -0.25			# Artifical screen resolution scaling
-r_nolerp 1					# Animation interpolation
-r_noframegrouplerp 1		# Animation interpolation for framegrouped models (such as torches)
-gl_affinemodels 1			# Affine texture projection
-cl_sbar 1					# Status bar HUD style
-r_dynamic 2					# Dynamic lightning setting
-r_shadow_realtime_dlight 0	# Dynamic lighting shadows
-r_part_classic_opaque 1  	# Particle opacity
+r_softwarebanding 1			// Limited color palette
+r_renderscale -0.25			// Artifical screen resolution scaling
+r_nolerp 1					// Animation interpolation
+r_noframegrouplerp 1		// Animation interpolation for framegrouped models (such as torches)
+gl_affinemodels 1			// Affine texture projection
+cl_sbar 1					// Status bar HUD style
+r_dynamic 2					// Dynamic lightning setting
+r_shadow_realtime_dlight 0	// Dynamic lighting shadows
+r_part_classic_opaque 1  	// Particle opacity
