CFG: tidied  controller weap swtich + fixed WinQ support
cleaned up the controller / alt weapon switch alias and in doing so fixed winquake support for the lite releases

it takes way less commands now and is modular due to changing an alias rather then a bind

--- a/lq1/default.cfg
+++ b/lq1/default.cfg
@@ -73,14 +73,13 @@ bind    "LTHUMB"        "+speed"
 
 // Weapons
 bind    "RTRIGGER"      "+attack"
-bind    "RTHUMB"        "+con_meleeatk"
-bind    "UPARROW"       "con_shotguns0"
-bind    "RIGHTARROW"    "con_nailguns0"
-bind    "LEFTARROW"     "con_explguns0"
-bind    "DOWNARROW"     "con_lightgun0;impulse 8;wait;echo;echo;echo;echo"
-bind    "RSHOULDER"     "con_nextweapn"
-bind    "LSHOULDER"     "con_prevweapn"
-
+bind    "RTHUMB"        "+melee"
+bind    "UPARROW"       "alt_shotgun"
+bind    "RIGHTARROW"    "alt_nailgun"
+bind    "LEFTARROW"     "alt_explgun"
+bind    "DOWNARROW"     "alt_lightgun"
+bind    "RSHOULDER"     "alt_nextweapn"
+bind    "LSHOULDER"     "alt_prevweapn"
 
 // Menu
 bind	"YBUTTON"		"menu_save"
@@ -102,11 +101,15 @@ volume 0.7
 gamma 1
 contrast 1
 sensitivity 3
-topcolor 11
-bottomcolor 10
 crosshair 1
 joy_enable 1
 +mlook
+
+//lq player defaults
+name "LQ Player"
+topcolor 11
+bottomcolor 10
+color 11 10
 
 // QuakeWorld Server Infokeys
 serverinfo dq 1     // Drop Quad on death in DM
@@ -127,9 +130,7 @@ alias 	"idkfa"		    "impulse 9"
 alias 	"fullammo"	    "impulse 9"
 alias 	"quad"		    "impulse 255"
 
-// Modern style melee attackcon_nextweapon
-alias   "+melee"        "impulse 1;+attack"
-alias   "-melee"        "-attack"
+
 
 // Zoom aliases
 alias   "+lq-zoom90"    "fov 90;wait;fov 80;wait;fov 70;wait;fov 60;wait;fov 50;wait;fov 40"
@@ -137,42 +138,46 @@ alias   "-lq-zoom90"    "fov 50;wait;fov 60;wait;fov 70;wait;fov 80;wait;fov 90"
 alias   "+lq-zoom120"   "fov 110;wait;fov 100;wait;fov 90;wait;fov 80;wait;fov 70;wait;fov 60;wait;fov 50;wait;fov 40"
 alias   "-lq-zoom120"   "fov 50;wait;fov 60;wait;fov 70;wait;fov 80;wait;fov 90;wait;fov 100;wait;fov 110;wait;fov 120"
 
-// Dpad doom style weapon switch
-alias "+con_meleeatk"   "impulse 1;+attack;wait;bind LEFTARROW con_explguns0;bind RIGHTARROW con_nailguns0;bind UPARROW con_shotguns0"
-alias "-con_meleeatk"   "-attack"
-alias "con_shotguns0"   "impulse 2;wait;bind UPARROW con_shotguns1;wait;echo;echo;echo;echo;bind LEFTARROW con_explguns0;bind RIGHTARROW con_nailguns0"
-alias "con_shotguns1"   "impulse 2;wait;impulse 3;wait;bind UPARROW con_shotguns0;wait;echo;echo;echo;echo;bind LEFTARROW con_explguns0;bind RIGHTARROW con_nailguns0"
-alias "con_nailguns0"   "impulse 4;wait;bind RIGHTARROW con_nailguns1;wait;echo;echo;echo;echo;bind LEFTARROW con_explguns0;bind UPARROW con_shotguns0"
-alias "con_nailguns1"   "impulse 4;wait;impulse 5;wait;bind RIGHTARROW con_nailguns0;wait;echo;echo;echo;echo;bind LEFTARROW con_explguns0;bind UPARROW con_shotguns0"
-alias "con_explguns0"   "impulse 6;wait;bind LEFTARROW con_explguns1;wait;echo;echo;echo;echo;bind RIGHTARROW con_nailguns0;bind UPARROW con_shotguns0"
-alias "con_explguns1"   "impulse 6;wait;impulse 7;wait;bind LEFTARROW con_explguns0;wait;echo;echo;echo;echo;bind RIGHTARROW con_nailguns0;bind UPARROW con_shotguns0"
-alias "con_lightgun0"   "impulse 8;wait;echo;echo;echo;echo;bind LEFTARROW con_explguns0;bind RIGHTARROW con_nailguns0;bind UPARROW con_shotguns0"
-alias "con_nextweapn"   "impulse 10;wait;bind LEFTARROW con_explguns0;bind RIGHTARROW con_nailguns0;bind UPARROW con_shotguns0"
-alias "con_prevweapn"   "impulse 12;wait;bind LEFTARROW con_explguns0;bind RIGHTARROW con_nailguns0;bind UPARROW con_shotguns0"
 
-// Keyboard doom style weapon switch
-alias "doom_weapon_switch_info" "echo; echo; echo; echo --- ; echo doom_weapon_switch is a number row weapon switch style which is more like doom and halflife ; echo 1 is axe;echo 2 is Shotgun and Super Shotgun ; echo 3 is Nailgun and Super Nailgun ; echo 4 is Grenade Launcher and Rocket Launcher ; echo 5 is Lightning Gun; echo ---- ;echo type doom_weapon_switch1 to enable it ; echo doom_weapon_switch0 to revert it "
+// alternative style weapon switch
 
-alias "doom_weapon_switch1" "echo doom style weapon switch enabled! ; bind MOUSE5 +key_meleeatk ; bind 1 key_meleewep0 ; bind 2 key_shotguns0 ; bind 3 key_nailguns0 ; bind 4 key_explguns0 ; bind 5 con_lightgun0 ; unbind 6 ; unbind 7 ; unbind 8 ; bind MWHEELUP key_nextweapn ; bind MWHEELDOWN key_prevweapn"
-alias "doom_weapon_switch0" "echo doom style weapon switch disabled! ; bind MOUSE5 +melee ; bind 1 impulse 1 ; bind 2 impulse 2 ; bind 3 impulse 3  ; bind 4 impulse 4 ; bind 5 impulse 5 ; bind 6 impulse 6 ; bind 7 impulse 7 ; bind 8 impulse 8 ; bind MWHEELUP impulse 10 ; bind MWHEELDOWN impulse 12"
+alias   "alt_meleewep"  "impulse 1;alt_reset"
 
-alias "key_meleewep0"   "impulse 1;wait;bind 4 key_explguns0;bind 3 key_nailguns0;bind 2 key_shotguns0"
-alias "key_shotguns0"   "impulse 2;wait;bind 2 key_shotguns1;wait;echo;echo;echo;echo;bind 4 key_explguns0;bind 3 key_nailguns0"
-alias "key_shotguns1"   "impulse 2;wait;impulse 3;wait;bind 2 key_shotguns0;wait;echo;echo;echo;echo;bind 4 key_explguns0;bind 3 key_nailguns0"
-alias "key_nailguns0"   "impulse 4;wait;bind 3 key_nailguns1;wait;echo;echo;echo;echo;bind 4 key_explguns0;bind 2 key_shotguns0"
-alias "key_nailguns1"   "impulse 4;wait;impulse 5;wait;bind 3 key_nailguns0;wait;echo;echo;echo;echo;bind 4 key_explguns0;bind 2 key_shotguns0"
-alias "key_explguns0"   "impulse 6;wait;bind 4 key_explguns1;wait;echo;echo;echo;echo;bind 3 key_nailguns0;bind 2 key_shotguns0"
-alias "key_explguns1"   "impulse 6;wait;impulse 7;wait;bind 4 key_explguns0;wait;echo;echo;echo;echo;bind 3 key_nailguns0;bind 2 key_shotguns0"
-alias "key_lightgun0"   "impulse 8;wait;echo;echo;echo;echo;bind 4 key_explguns0;bind 3 key_nailguns0;bind 2 key_shotguns0"
-alias "key_nextweapn"   "impulse 10;wait;bind 4 key_explguns0;bind 3 key_nailguns0;bind 2 key_shotguns0"
-alias "key_prevweapn"   "impulse 12;wait;bind 4 key_explguns0;bind 3 key_nailguns0;bind 2 key_shotguns0"
-alias "+key_meleeatk"   "impulse 1;+attack;wait;bind 4 key_explguns0;bind 3 key_nailguns0;bind 2 key_shotguns0"
-alias "-key_meleeatk"   "-attack"
+alias 	"alt_shotgun"    "alt_shotgun0"
+alias 	"alt_shotgun0"   "impulse 2;alt_reset;alias alt_shotgun alt_shotgun1"
+alias 	"alt_shotgun1"   "impulse 3;alt_reset;alias alt_shotgun alt_shotgun0"
+
+alias 	"alt_nailgun"    "alt_nailgun0"
+alias 	"alt_nailgun0"   "impulse 4;alt_reset;alias alt_nailgun alt_nailgun1"
+alias 	"alt_nailgun1"   "impulse 5;alt_reset;alias alt_nailgun alt_nailgun0"
+
+alias 	"alt_explgun"    "alt_explgun0"
+alias 	"alt_explgun0"   "impulse 6;alt_reset;alias alt_explgun alt_explgun1"
+alias 	"alt_explgun1"   "impulse 7;alt_reset;alias alt_explgun alt_explgun0"
+
+alias 	"alt_lightgun"   "impulse 8;alt_reset"
+
+alias 	"alt_nextweapn"   "impulse 10;alt_reset"
+alias 	"alt_prevweapn"   "impulse 12;alt_reset"
+
+alias 	"alt_reset"      "wait;alias alt_shotgun alt_shotgun0;alias alt_nailgun alt_nailgun0;alias alt_explgun alt_explgun0"
+
+// Keyboard alternative style weapon switch
+alias 	"alt_weapon_switch_info" "echo; echo; echo; echo --- ; echo alternative_weapon_switch is a number row weapon switch style which is more like HL ; echo 1 is axe;echo 2 is Shotgun and Super Shotgun ; echo 3 is Nailgun and Super Nailgun ; echo 4 is Grenade Launcher and Rocket Launcher ; echo 5 is Lightning Gun; echo ---- ;echo type alternative_weapon_switch1 to enable it ; echo alternative_weapon_switch0 to revert it to default"
+
+alias 	"alt_weapon_switch1" "echo alternative style weapon switch enabled! ; bind 1 alt_meleewep ; bind 2 alt_shotgun ; bind 3 alt_nailgun ; bind 4 alt_explgun ; bind 5 alt_lightgun ; unbind 6 ; unbind 7 ; unbind 8 ; bind MWHEELUP alt_nextweapn ; bind MWHEELDOWN alt_prevweapn"
+alias 	"alt_weapon_switch0" "echo alternative style weapon switch disabled! ; bind 1 impulse 1 ; bind 2 impulse 2 ; bind 3 impulse 3  ; bind 4 impulse 4 ; bind 5 impulse 5 ; bind 6 impulse 6 ; bind 7 impulse 7 ; bind 8 impulse 8 ; bind MWHEELUP impulse 10 ; bind MWHEELDOWN impulse 12"
+
+
+// Modern style melee attack
+alias   "+melee"        "alt_meleewep;+attack"
+alias   "-melee"        "-attack"
+
 
 // Graphics Style Toggle
-alias lq_style_modern "lq_style_modern_exec; alias lq_toggle_style_set lq_style_retro"
-alias lq_style_retro "lq_style_retro_exec; alias lq_toggle_style_set lq_style_modern"
-alias lq_toggle_style "cl_warncmd 0; lq_toggle_style_set; vid_reload; cl_warncmd 1"
+alias 	"lq_style_modern" "lq_style_modern_exec; alias lq_toggle_style_set lq_style_retro"
+alias 	"lq_style_retro" "lq_style_retro_exec; alias lq_toggle_style_set lq_style_modern"
+alias 	"lq_toggle_style" "cl_warncmd 0; lq_toggle_style_set; vid_reload; cl_warncmd 1"
 lq_style_modern
 
 // Other Config Files
