--- a/lq1/quake.rc
+++ b/lq1/quake.rc
@@ -16,12 +16,12 @@ startdemos demo1 demo2 demo3
 wait
 Echo
 Echo ==============================
-Echo check out the new comands
+Echo check out our commands
 Echo Zoom90 or Zoom120 for the zoom function
-Echo Dev for dev bindings
-Echo Cam for the new camera system we use for the main menu demos
+Echo Dev for development bindings
+Echo Cam for the camera system we use for the main menu demos
 Echo ==============================
 Echo
 Echo ==============================
-Echo LibreQuake Version V0.08-beta
+Echo LibreQuake Version V0.09-beta
 Echo ==============================
