BUILD: fixed typo of gfx.mainmenu2 -> gfx/mainmenu2

--- a/build_components.json
+++ b/build_components.json
@@ -846,7 +846,7 @@
             "gfx/menumods.lmp",
             "gfx/menudemos.lmp",
             "gfx/p_mods.lmp",
-            "gfx.mainmenu2.lmp",
+            "gfx/mainmenu2.lmp",
             "gfx/levels.lmp",
             "gfx/demos.lmp",
             "gfx/pop.lmp"
